--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
     "zendframework/zend-log": "2.*",
     "zendframework/zend-i18n": "2.*",
     "zendframework/zend-console": "2.*",
-    "zendframework/zend-http": "2.*"
+    "zendframework/zend-http": "2.*",
+    "zendframework/zend-validator": "2.*",
+    "zendframework/zend-filter": "2.*",
+    "components/jquery": "*",
+    "components/jqueryui": "*",
+    "components/bootstrap": "*"
   }
 }
